--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 [[logo.png]]
-* SQLsmith
+* SQLsmith (Firebolt Edition)
 
 : <mba> "I love the smell of coredumps in the morning"
 
@@ -67,12 +67,15 @@ Example invocations:
 : sqlsmith --verbose --sqlite="file:$HOME/.mozilla/firefox/places.sqlite?mode=ro"
 : # testing MonetDB
 : sqlsmith --verbose --monetdb="mapi:monetdb://localhost:50000/smith"
+: # testing Firebolt
+: sqlsmith --verbose --firebolt=http://localhost:8123/?database=local_dev_db&use_standard_sql=1
 
 The following options are currently supported:
 
 | =--target=connstr=   | target postgres database (default: libpq defaults)       |
 | =--sqlite=URI=       | target SQLite3 database                                  |
 | =--monetdb=URI=      | target MonetDB database                                  |
+| =--firebolt=URI=     | target Firebolt database server                          |
 | =--log-to=connstr=   | postgres db for logging errors into (default: don't log) |
 | =--verbose=          | emit progress output                                     |
 | =--version=          | show version information                                 |
