--- a/README.org
+++ b/README.org
@@ -10,7 +10,7 @@ which proved valuable for quality assurance in C compilers.
 This is a public fork of the original upstream, intended for the purpose of integrating Firebolt into SQLsmith, and is
 currently undergoing rapid development for Firebolt CI fuzzing.
 
-This fork is currently maintained by Product Security, but contributions from Engineering are heavily encouraged to fine tune
+This fork is currently maintained by Firebolt Security Research team, but contributions from Engineering are heavily encouraged to fine tune
 the fuzzer for Firebolt specific data-types and functions.
 
 
